[gd_scene load_steps=15 format=3 uid="uid://1sx5ofign2rh"]

[ext_resource type="Script" path="res://Scripts/Enemies/canon.gd" id="1_sehov"]
[ext_resource type="Texture2D" uid="uid://b3x6hewoj4lve" path="res://assets/Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Fire/6.png" id="2_02oj3"]
[ext_resource type="Texture2D" uid="uid://dun612gtdmw2t" path="res://assets/Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Idle/1.png" id="3_ohuje"]
[ext_resource type="Texture2D" uid="uid://b6dcy4o33otcx" path="res://assets/Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Fire/1.png" id="4_c4f05"]
[ext_resource type="Texture2D" uid="uid://flukubp1hwms" path="res://assets/Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Fire/2.png" id="5_an224"]
[ext_resource type="Texture2D" uid="uid://b2ei8vul8gsu0" path="res://assets/Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Fire/3.png" id="6_d76x7"]
[ext_resource type="Texture2D" uid="uid://seyxod1u6ipg" path="res://assets/Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Fire/4.png" id="7_4otbr"]
[ext_resource type="Texture2D" uid="uid://y2q52w70mub5" path="res://assets/Treasure Hunters/Shooter Traps/Sprites/Cannon/Cannon Fire/5.png" id="8_2l6hk"]
[ext_resource type="Script" path="res://Scenes/Components/hurt_box.gd" id="9_r6pkj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f378c"]
size = Vector2(30, 22)

[sub_resource type="Animation" id="Animation_quj0y"]
resource_name = "attack"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("3_ohuje"), ExtResource("4_c4f05"), ExtResource("5_an224"), ExtResource("6_d76x7"), ExtResource("7_4otbr"), ExtResource("8_2l6hk"), ExtResource("2_02oj3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:shooting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_hi8tu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:shooting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k8k1v"]
_data = {
"RESET": SubResource("Animation_hi8tu"),
"attack": SubResource("Animation_quj0y")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dquy6"]
size = Vector2(30, 22)

[node name="Canon" type="StaticBody2D"]
script = ExtResource("1_sehov")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_02oj3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_f378c")

[node name="DetectPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k8k1v")
}

[node name="Firepoint" type="Marker2D" parent="."]
position = Vector2(-14, 0)

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource("9_r6pkj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_dquy6")

[connection signal="area_entered" from="DetectPlayer" to="." method="_on_detect_player_area_entered"]
